--- a/Web/ClientsTracker.Web/Areas/Administration/Views/Users/Details.cshtml
+++ b/Web/ClientsTracker.Web/Areas/Administration/Views/Users/Details.cshtml
@@ -11,13 +11,18 @@
                   command.Edit();
                   command.Destroy();
               }).Width(180);
-      }).ToolBar(toolbar =>
-          {
-              toolbar.Excel();
-              toolbar.Pdf();
-          }).ColumnMenu().Editable(editable => editable.Mode(GridEditMode.InLine)).Pageable().Sortable(sortable => { sortable.SortMode(GridSortMode.MultipleColumn); }).Filterable().Scrollable(a => a.Height("auto")).DataSource(dataSource => dataSource.Ajax().Model(model => model.Id(p => p.Id)).Read(read => read.Action("ApplicationUsers_Read", "User")).Create(create => create.Action("ApplicationUsers_Create", "User")).Update(update => update.Action("ApplicationUsers_Update", "User")).Destroy(destroy => destroy.Action("ApplicationUsers_Destroy", "User")))
+      }).ToolBar(toolbar =>{})
+        .ColumnMenu()
+        .Editable(editable => editable.Mode(GridEditMode.InLine))
+        .Pageable().Sortable(sortable => { sortable.SortMode(GridSortMode.MultipleColumn); })
+        .Filterable().Scrollable(a => a.Height("auto"))
+        .DataSource(dataSource => dataSource.Ajax().Model(model => model.Id(p => p.Id))
+        .Read(read => read.Action("ApplicationUsers_Read", "Users"))
+        .Create(create => create.Action("ApplicationUsers_Create", "Users"))
+        .Update(update => update.Action("ApplicationUsers_Update", "Users"))
+        .Destroy(destroy => destroy.Action("ApplicationUsers_Destroy", "Users")))
           )
 
-@section customScripts {
+@*@section customScripts {
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jszip/2.4.0/jszip.js"></script>
-}
+}*@
