--- a/Web/ClientsTracker.Web/Content/Site.css
+++ b/Web/ClientsTracker.Web/Content/Site.css
@@ -4,3 +4,37 @@
 #content {
   padding-top: 30px;
 }
+div.k-edit-form-container {
+  width: auto !important;
+}
+.k-window {
+  width: 30% !important;
+}
+.grid-search {
+  width: 30% !important;
+}
+.grid-manage-label {
+  font-size: 25px;
+  font-weight: bold;
+}
+.mysteryShopper-details ul {
+  list-style: none;
+  font-style: italic;
+  margin: 15px;
+  padding: 0;
+}
+.mysteryShopper-details ul li {
+  margin: 0;
+  line-height: 1.7em;
+}
+.mysteryShopper-details label {
+  display: inline-block;
+  width: 150px;
+  padding-right: 10px;
+  text-align: right;
+  font-style: normal;
+  font-weight: bold;
+}
+.form-control {
+  width: 90% !important;
+}
