--- a/Web/ClientsTracker.Web/Views/Clients/Index.cshtml
+++ b/Web/ClientsTracker.Web/Views/Clients/Index.cshtml
@@ -1,6 +1,12 @@
 ﻿@using ClientsTracker.Common
 @using ClientsTracker.Web.Infrastructure.Clients
 @using Kendo.Mvc.UI
+<script type="text/javascript">
+    function hideIdField(e) {
+        $("#Id").hide();
+        $("label[for='Id']").hide();
+    }
+</script>
 @(Html.Kendo().Grid<ClientVM>()
     .Name("grid")
     .Columns(columns =>
@@ -10,6 +16,7 @@
         columns.Bound(e => e.Email).Filterable(f => f.Multi(true).Search(true));
         columns.Bound(e => e.Activity).Filterable(f => f.Multi(true).Search(true));
         columns.Bound(e => e.ContactPerson).Filterable(f => f.Multi(true).Search(true));
+        columns.Command(command => { command.Edit(); command.Destroy(); });
     })
     .ClientDetailTemplateId("template")
     .ToolBar(toolbar => toolbar.Template(
@@ -23,6 +30,7 @@
         </text>))
     .Editable(editable => editable.Mode(GridEditMode.PopUp))
     .Filterable(f => f.Extra(false))
+    .Events(e => e.Edit("hideIdField"))
     .Pageable(p => p.PageSizes(new int[] { 10, 20, 50 }))
     .Sortable(sortable =>
     {
@@ -31,7 +39,11 @@
     .DataSource(dataSource => dataSource
         .Ajax()
         .PageSize(10)
-        .Model(model => model.Id(p => p.Id))
+        .Model(model =>
+        {
+            model.Id(p => p.Id);
+            model.Field(p => p.Id).Editable(false);
+        })
         .Create(update => update.Action("Clients_Create", "Clients"))
         .Read(read => read.Action("Clients_Read", "Clients"))
         .Update(update => update.Action("Clients_Update", "Clients"))
